--- a/app/src/main/res/layout/about_app_layout.xml
+++ b/app/src/main/res/layout/about_app_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/full_application_144px" />
 
             <TextView
                 android:id="@+id/app_title_label"
