--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,11 @@
         <item name="preferenceTheme">@style/AppTheme.Preference</item>
     </style>
 
+    <style name="AppTheme.TemplateButtons" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="AppTheme.Preference" parent="PreferenceThemeOverlay">
         <item name="android:layout">@layout/settings_layout</item>
     </style>
