--- a/app/src/main/res/layout/datetime_picker_layout.xml
+++ b/app/src/main/res/layout/datetime_picker_layout.xml
@@ -9,14 +9,23 @@
     android:paddingTop="10dp"
     android:paddingRight="16dp">
 
-    <EditText
-        android:id="@+id/date_edit"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/date_edit"
-        android:inputType="text"
-        android:maxLength="10" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/date_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/date_edit"
+            android:inputType="text"
+            android:maxLength="10"
+            tools:ignore="TextFields" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/error_date_text"
@@ -27,15 +36,24 @@
         android:textColor="@color/holo_red_light"
         android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/time_edit"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:ems="10"
-        android:hint="@string/time_edit"
-        android:inputType="text"
-        android:maxLength="8" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/time_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:ems="10"
+            android:hint="@string/time_edit"
+            android:inputType="text"
+            android:maxLength="8" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/error_time_text"
