--- a/app/src/main/res/layout/templates_item.xml
+++ b/app/src/main/res/layout/templates_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -10,15 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
         android:background="@drawable/tag_shape"
+        android:fontFamily="sans-serif-medium"
         android:paddingLeft="8dp"
+        android:paddingTop="0dp"
         android:paddingRight="8dp"
+        android:paddingBottom="0dp"
         android:text="Template name"
+        android:textSize="12sp"
         android:theme="@style/AppTheme.TemplateButtons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
