--- a/app/src/main/res/layout/timer_item_layout.xml
+++ b/app/src/main/res/layout/timer_item_layout.xml
@@ -37,11 +37,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
+                    android:fontFamily="sans-serif-medium"
                     android:singleLine="true"
                     android:text="Item name"
                     android:textColor="?android:attr/colorForeground"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/item_subtitle"
