--- a/app/src/main/res/layout-night/templates_item.xml
+++ b/app/src/main/res/layout-night/templates_item.xml
@@ -17,8 +17,10 @@
         android:paddingRight="8dp"
         android:paddingBottom="0dp"
         android:text="Template name"
+        android:textColor="@color/colorAccent"
         android:textSize="12sp"
         android:theme="@style/AppTheme.TemplateButtons"
+        app:backgroundTint="@color/colorPrimaryDark2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
