--- a/app/src/main/res/layout/about_app_layout.xml
+++ b/app/src/main/res/layout/about_app_layout.xml
@@ -83,16 +83,18 @@
                     android:layout_width="141dp"
                     android:layout_height="40dp"
                     android:text="@string/repo_button"
+                    android:textColor="@color/colorAccent"
                     android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/website_button"
                     android:layout_width="140dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:text="Website"
                     android:textSize="16sp"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    tools:ignore="HardcodedText" />
             </LinearLayout>
 
         </LinearLayout>
