--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,6 @@
 <resources>
     <color name="colorPrimary">#399cde</color>
     <color name="colorPrimaryDark">#2f7caf</color>
-    <color name="colorAccent">#399cde</color>
+    <color name="colorAccent">#60bfff</color>
     <color name="holo_red_light">#ff4444</color>
-    <color name="colorPrimaryDark2">#23475f</color>
 </resources>
